--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
+    "loadtest": "colyseus-loadtest loadtest/example.ts --room map-5-5 --numClients 2 --endpoint ws://localhost:3000",
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
     "clean": "node node_modules/rimraf/bin lib",
     "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000"
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "@colyseus/arena": "^0.14.22",
-    "@colyseus/monitor": "^0.14.20",
+    "@colyseus/monitor": "^0.14.22",
+    "@colyseus/schema": "^1.0.35",
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.18.1",
+    "immer": "^9.0.15"
   }
 }
